# deepagents

./: .release-please-manifest.json
clients/python/langchain-agent-sandbox/: README.md  pyproject.toml
clients/python/langchain-agent-sandbox/langchain_agent_sandbox/: __init__.py  backend.py
clients/python/langchain-agent-sandbox/tests/: test_backend.py
libs/cli/: CHANGELOG.md  pyproject.toml
libs/cli/deepagents_cli/: _version.py
libs/code/: CHANGELOG.md  pyproject.toml
libs/code/deepagents_code/: _version.py
libs/deepagents/: CHANGELOG.md  pyproject.toml
libs/partners/k8s-agent-sandbox/: README.md  pyproject.toml
libs/partners/k8s-agent-sandbox/langchain_k8s_agent_sandbox/: __init__.py  backend.py  lifecycle_manager.py  sandbox.py  settings.py  utils.py
libs/partners/k8s-agent-sandbox/tests/: conftest.py  test_backend.py  test_lifecycle_manager.py  test_sandbox.py
libs/partners/quickjs/: CHANGELOG.md  pyproject.toml
libs/partners/vercel/: CHANGELOG.md  pyproject.toml
libs/partners/vercel/langchain_vercel_sandbox/: _version.py
libs/talon/: CHANGELOG.md  pyproject.toml
libs/talon/deepagents_talon/: _version.py
