[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepagents-talon"
version = "0.0.3"
description = "Local runtime host for long-running Deep Agents channels and schedules (experimental)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["agents", "ai", "deepagents", "runtime", "channels", "scheduling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "deepagents>=0.7.0a3",
    "deepagents-code>=0.1.30,<1.0.0",
    "fleet-deepagents-export>=0.0.1,<1.0.0",
    "langchain-mcp-adapters>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
media = [
    "deepagents-code[media]>=0.1.30,<1.0.0",
    "librosa>=0.11.0,<1.0.0",
    "numpy>=2.4.6,<3.0.0",
    "phonemizer>=3.3.0,<4.0.0",
    "torch>=2.12.1,<2.13.0",
    "torchaudio>=2.11.0,<2.12.0",
    "transformers>=5.12.1,<6.0.0",
]

[project.scripts]
deepagents-talon = "deepagents_talon.__main__:main"

[project.urls]
Homepage = "https://docs.langchain.com/oss/python/deepagents/overview"
Documentation = "https://reference.langchain.com/python/deepagents/"
Repository = "https://github.com/langchain-ai/deepagents"
Issues = "https://github.com/langchain-ai/deepagents/issues"

[dependency-groups]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-socket>=0.8.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-watcher>=0.6.3,<1.0.0",
    "ruff>=0.15.20,<0.16.0",
    "ty>=0.0.54,<1.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["deepagents_talon"]
artifacts = [
    "deepagents_talon/channels/whatsapp_bridge/bridge.js",
    "deepagents_talon/channels/whatsapp_bridge/package.json",
]

[tool.uv.sources]
deepagents = { path = "../deepagents", editable = true }
deepagents-code = { path = "../code", editable = true }

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["../deepagents", "../code"]

[tool.ty.rules]
division-by-zero = "error"

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with the formatter
    "ISC001",  # Conflicts with the formatter
]
extend-safe-fixes = ["PLR6201"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["deepagents_code", "deepagents_talon"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",
    "ANN201",
    "ANN202",
    "D",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
