[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-k8s-agent-sandbox"
description = "LangChain DeepAgents backend for Kubernetes agent-sandbox."
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.6.0,<0.7.0",
    "k8s-agent-sandbox~=0.5.0",
    "langgraph-cli[inmem]>=0.4.30",
]

[project.urls]
Homepage = "https://github.com/langchain-ai/deepagents/tree/main/libs/partners/k8s-agent-sandbox"
Repository = "https://github.com/langchain-ai/deepagents"
Documentation = "https://github.com/langchain-ai/deepagents/tree/main/libs/partners/k8s-agent-sandbox"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
deepagents = { path = "../../deepagents", editable = true }

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
no_implicit_optional = true


[tool.pyright]
extraPaths = ['../../deepagents']
