[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-vercel-sandbox"
description = "Vercel Sandbox integration for Deep Agents"
license = { text = "MIT" }
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

version = "0.0.2"
requires-python = ">=3.11,<4.0"
dependencies = [
    "deepagents>=0.6.12,<0.7.0",
    "vercel>=0.5.9,<0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_vercel_sandbox"]

[project.urls]
Homepage = "https://github.com/langchain-ai/deepagents/tree/main/libs/partners/vercel"
Repository = "https://github.com/langchain-ai/deepagents"
Documentation = "https://github.com/langchain-ai/deepagents/tree/main/libs/partners/vercel"

[dependency-groups]
test = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-cov",
    "pytest-socket",
    "pytest-xdist",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20,<1.0.0",
    "ty>=0.0.54,<1.0.0",
    "langchain-tests>=1.1.9",
]

[tool.uv.sources]
deepagents = { path = "../../deepagents", editable = true }

[tool.uv]
constraint-dependencies = ["urllib3>=2.7.0"]

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["../../deepagents"]

[tool.ty.rules]
# https://docs.astral.sh/ty/rules/
division-by-zero = "error"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Messes with the formatter
    "ISC001",  # Messes with the formatter
]
extend-safe-fixes = ["PLR6201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
testpaths = ["tests"]
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
    "scheduled: mark tests to run in scheduled testing",
]
asyncio_mode = "auto"
filterwarnings = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D", "S101", "SLF001"]
